<resources>
    <string name="app_name">Tudus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_create_todo">CreateTodoActivity</string>
    <string name="priority_medium">MEDIUM</string>
    <string name="priority_high">HIGH</string>
    <string name="priority_low">LOW</string>
    <string name="create_todo_priority_label">Priority</string>
    <string name="create_todo_date_start_label">Start date</string>
    <string name="create_todo_date_end_label">End date</string>
    <string name="create_todo_start_time_label">Start time</string>
    <string name="create_todo_end_time_label">End time</string>
    <string name="create_todo_category_label">Category</string>
    <string name="create_todo_notification_label">Notification</string>
    <string name="create_todo_description_label">Description</string>
    <string name="todo_today">Todo today</string>
    <string name="todo_all">Todo all</string>
    <string name="buzer_today">Buzer today</string>
    <string name="buzer_list">Buzer list</string>
    <string name="ideas">Ideas</string>
    <string name="new_todo">New tudu</string>
    <string name="title_activity_settings">Settings</string>
    <string name="select_language">Select language</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="e_g_study_for_exam">e.g. Study for exam</string>
    <string name="import_data">Import data</string>
    <string name="edit_todo">Edit tudu</string>
    <string name="close_app_title">Closing Tudus</string>
    <string name="close_app_message">Are you sure you want ot close Tudus?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_completed">Show completed</string>
    <string name="google_account_access">This app needs to access your Google account (via Contacts).</string>
    <string name="connection_unavailable">No network connection available.</string>
    <string name="error_occurred">The following error occurred:</string>
    <string name="request_cancelled">Request cancelled.</string>
    <string name="no_result_returned">No results returned for this option.</string>
    <string name="till_end_month">Till end of month</string>
    <string name="till_end_year">Till end of year</string>
    <string name="all">All</string>
    <string name="select_options">Select one of options</string>
    <string name="install_play">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>
    <string name="fetching_data_calendar">Cooperating with Google Calendar API ...</string>
    <string name="todos_imported">todos imported</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
    <string name="validation_empty">This field cannot be empty.</string>
    <string name="start_after_end">Start date and time cannot be same or after end date and time.</string>

</resources>
