<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".todo.screen.create.CreateTodoActivity"
    tools:showIn="@layout/activity_create_todo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary"></LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rect"
        android:elevation="2dp"
        android:orientation="vertical">
        <!-- TUDU TITLE START -->
        <EditText
            android:id="@+id/create_todo_title"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_margin="5dp"
            android:hint="Tudu name (e.g. Kill wife)"
            android:textAlignment="center"
            android:textSize="28sp" />
        <!-- TUDU TITLE END -->
        <!-- TUDU PRIORITY START -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/create_todo_priority_label"
                        android:textColor="@color/secondary_text" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:id="@+id/create_todo_low_priority_btn"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/rect_all_corners_rounded"
                            android:gravity="center_horizontal|center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/priority_low"
                                android:textColor="@color/primary_text"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/create_todo_low_priority_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_check_24dp"
                                android:visibility="invisible" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/create_todo_med_priority_btn"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/rect_all_corners_rounded"
                            android:gravity="center_horizontal|center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/priority_medium"
                                android:textColor="@color/primary_text"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/create_todo_med_priority_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_check_24dp"
                                android:visibility="invisible" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/create_todo_high_priority_btn"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/rect_all_corners_rounded"
                            android:gravity="center_horizontal|center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/priority_high"
                                android:textColor="@color/primary_text"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/create_todo_high_priority_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_check_24dp"
                                android:visibility="invisible" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
                <!-- TUDU PRIORITY END -->
                <!-- TUDU DATE START -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_todo_date_label"
                        android:textColor="@color/secondary_text" />

                    <EditText
                        android:id="@+id/create_todo_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="Select date" />
                </LinearLayout>
                <!-- TUDU DATE END -->
                <!-- TUDU TIME START -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/create_todo_start_time_label"
                                android:textColor="@color/secondary_text" />

                            <EditText
                                android:id="@+id/create_todo_start_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:hint="Select time" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/create_todo_end_time_label"
                                android:textColor="@color/secondary_text" />

                            <EditText
                                android:id="@+id/create_todo_end_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:hint="Select time" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <!-- TUDU TIME END -->
                <!-- TUDU CATEGORY START -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"

                        android:layout_marginTop="8dp"
                        android:text="@string/create_todo_category_label"
                        android:textColor="@color/secondary_text" />

                    <Spinner
                        android:id="@+id/create_todo_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="Select date" />
                </LinearLayout>
                <!-- TUDU CATEGORY END -->
                <!-- TUDU NOTIFICATION START -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"

                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/create_todo_notification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/create_todo_notification_label" />
                </LinearLayout>
                <!-- TUDU NOTIFICATION END -->
                <!-- TUDU DESCRIPTION START -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"

                        android:layout_marginTop="8dp"
                        android:text="@string/create_todo_description_label"
                        android:textColor="@color/secondary_text" />

                    <EditText
                        android:id="@+id/create_todo_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rect_all_corners_rounded"
                        android:gravity="top|start"
                        android:hint="Write todo description here..."
                        android:inputType="textMultiLine"
                        android:lines="20"
                        android:minLines="5"
                        android:padding="5dp"
                        android:scrollHorizontally="false"
                        android:scrollbars="vertical" />
                </LinearLayout>
                <!-- TUDU DESCRIPTION END -->

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>
